--- a/index.html
+++ b/index.html
@@ -2,22 +2,16 @@
 <html lang="uk">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- цей тег допомагає забезпечити адаптивність веб-сайту 
-		до різних розмірів екранів пристроїв,
-		таких як мобільні телефони, 
-		планшети та настільні комп'ютери.-->
+		 
 		<title>Моя сторінка</title>
 		<link rel="stylesheet" href=" ">
-		<!-- <!--Тег <link> з атрибутом rel="stylesheet" використовується в HTML 
-		для підключення зовнішнього файлу стилів (CSS) до веб-сторінки. 
-		Це дозволяє вам відокремити стилі від HTML-коду, 
-		що полегшує управління та редагуванням дизайну вашого веб-сайту.--> 
+		 
 	</head>
 	<style>
 		table,th,td{
 			border: 1px solid black;
 			border-collapse: collapse;
-			padding:10px; <!-- додаємо відступи у заголовоках і комірках таблиці -->
+			padding:10px;  
 			}
 		body {
   font-family: Roboto, sans;}
@@ -82,13 +76,13 @@
 		<tr>
 			<td><b>Фото</b></td>
 			<td><a href="http://surl.li/irkxs"> <img src="image\Everest.jpg" alt="Еверест"width= '150' height='150'></a></td>
-			<td><img src="image\Aconcagua.JPG"alt="Аконкагуа"width= '150'height='150'></td>
-			<td><img src="image\Den.jpg" alt="Деналі"width= '150'height='150'></td>
-			<td><img src="image\Kilimanjaro.jpg" alt="Кіліманджаро"width= '150'height='150'></td>
-			<td><img src="image\Elbrus.jpg" alt="Ельбрус"width= '150'height='150'></td>
-			<td><img src="image\Vinson.jpg" alt="Вінсон"width= '150'height='150'></td>
-			<td><img src="image\Puncakjaya.jpg" alt="Пунчак-Джая"width= '150'height='150'></td>
-			<td><img src="image\Kosciuszko.jpg" alt="Косцюшко"width= '150'height='150'></td>
+			<td><img src="\Aconcagua.JPG"alt="Аконкагуа"width= '150'height='150'></td>
+			<td><img src="\Den.jpg" alt="Деналі"width= '150'height='150'></td>
+			<td><img src="\Kilimanjaro.jpg" alt="Кіліманджаро"width= '150'height='150'></td>
+			<td><img src="\Elbrus.jpg" alt="Ельбрус"width= '150'height='150'></td>
+			<td><img src="\Vinson.jpg" alt="Вінсон"width= '150'height='150'></td>
+			<td><img src="\Puncakjaya.jpg" alt="Пунчак-Джая"width= '150'height='150'></td>
+			<td><img src="\Kosciuszko.jpg" alt="Косцюшко"width= '150'height='150'></td>
 			 
 		</tr>
 	</tbody>
