--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 		<tr>
 			<td><b>Фото</b></td>
 			<td><a href="http://surl.li/irkxs"> <img src="image\Everest.jpg" alt="Еверест"width= '150' height='150'></a></td>
-			<td><img src="\Aconcagua.JPG"alt="Аконкагуа"width= '150'height='150'></td>
-			<td><img src="\Den.jpg" alt="Деналі"width= '150'height='150'></td>
-			<td><img src="\Kilimanjaro.jpg" alt="Кіліманджаро"width= '150'height='150'></td>
-			<td><img src="\Elbrus.jpg" alt="Ельбрус"width= '150'height='150'></td>
-			<td><img src="\Vinson.jpg" alt="Вінсон"width= '150'height='150'></td>
-			<td><img src="\Puncakjaya.jpg" alt="Пунчак-Джая"width= '150'height='150'></td>
-			<td><img src="\Kosciuszko.jpg" alt="Косцюшко"width= '150'height='150'></td>
+			<td><img src="Aconcagua.JPG"alt="Аконкагуа"width= '150'height='150'></td>
+			<td><img src="Den.jpg" alt="Деналі"width= '150'height='150'></td>
+			<td><img src="Kilimanjaro.jpg" alt="Кіліманджаро"width= '150'height='150'></td>
+			<td><img src="Elbrus.jpg" alt="Ельбрус"width= '150'height='150'></td>
+			<td><img src="Vinson.jpg" alt="Вінсон"width= '150'height='150'></td>
+			<td><img src="Puncakjaya.jpg" alt="Пунчак-Джая"width= '150'height='150'></td>
+			<td><img src="Kosciuszko.jpg" alt="Косцюшко"width= '150'height='150'></td>
 			 
 		</tr>
 	</tbody>
