--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		tbody{background: cyan ;}
 		thead{background: Turquoise;}
 	</style>
- <body style="background-image: url('file:///W:/Grihcko/Html12-2023/таблиц/Seven_peaks_World/image/im.png');
+ <body style="background-image: url('im.jpeg');
 			  background-size: cover; 
 			  background-position: center; 
 			  background-repeat: no-repeat;">
@@ -75,7 +75,7 @@
 		</tr>
 		<tr>
 			<td><b>Фото</b></td>
-			<td><a href="http://surl.li/irkxs"> <img src="image\Everest.jpg" alt="Еверест"width= '150' height='150'></a></td>
+			<td><a href="http://surl.li/irkxs"> <img src="Everest.jpg" alt="Еверест"width= '150' height='150'></a></td>
 			<td><img src="Aconcagua.JPG"alt="Аконкагуа"width= '150'height='150'></td>
 			<td><img src="Den.jpg" alt="Деналі"width= '150'height='150'></td>
 			<td><img src="Kilimanjaro.jpg" alt="Кіліманджаро"width= '150'height='150'></td>
