--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		tbody{background: cyan ;}
 		thead{background: Turquoise;}
 	</style>
- <body style="background-image: url('im.jpeg');
-			  background-size: cover; 
-			  background-position: center; 
-			  background-repeat: no-repeat;">
+ <body style="margin: 0;
+            padding: 0;
+            background: url('im.jpeg') no-repeat center center fixed;
+            background-size: cover;">
 
  <h1  align="center" style="color:blue;" > Проєкт "Дах світу"</h1>
  <h2  align="center" style="color:blue;" > 10 клас 2024р"</h2>
