--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		 
-		<title>Моя сторінка</title>
+		<title>Вершини Світу</title>
 		<link rel="stylesheet" href=" ">
 		 
 	</head>
@@ -23,7 +23,9 @@
             background: url('im.jpeg') no-repeat center center fixed;
             background-size: cover;">
 
- <h1  align="center" style="color:blue;" > Проєкт "Дах світу"</h1>
+ <h1  text-align: center;
+            color: blue;
+            text-shadow: 2px 2px lightblue; /* Додаємо світлоблакитну тінь */> Проєкт "Дах світу"</h1>
  <h2  align="center" style="color:blue;" > 10 клас 2024р"</h2>
  <table>
 	<thead style="font-size:18px; color:blue;">
