--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
             background: url('im.jpeg') no-repeat center center fixed;
             background-size: cover;">
 
- <h1  text-align: center;
-            color: blue;
-            text-shadow: 2px 2px lightblue; /* Додаємо світлоблакитну тінь */> Проєкт "Дах світу"</h1>
+ <h1  align="center" style="color:blue;" text-shadow=" 2px 2px lightblue;"> Проєкт "Дах світу"</h1>
  <h2  align="center" style="color:blue;" > 10 клас 2024р"</h2>
  <table>
 	<thead style="font-size:18px; color:blue;">
