--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             background: url('im.jpeg') no-repeat center center fixed;
             background-size: cover;">
 
- <h1  align="center" style="color:blue;" text-shadow=" 2px 2px lightblue;"> Проєкт "Дах світу"</h1>
+ <h1 align="center" style="color: blue; text-shadow: 2px 2px 4px rgba(0, 0, 255, 0.3);">Проєкт "Дах світу"</h1>
+
  <h2  align="center" style="color:blue;" > 10 клас 2024р"</h2>
  <table>
 	<thead style="font-size:18px; color:blue;">
